# fastapi-uws

./: .pylintrc  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/source/: index.rst
docs/source/pages/: installation.rst
fastapi_uws/: __init__.py  main.py  responses.py  service.py  settings.py  worker.py
fastapi_uws/models/: __init__.py  models.py  types.py
fastapi_uws/requests/: __init__.py  requests.py
fastapi_uws/router/: uws_router.py
fastapi_uws/stores/: __init__.py  base.py  mem_store.py
fastapi_uws/workers/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_fastapi_uws.py
